[metadata]
name = python-changelog-docker-KAD6LR
version = 0.0.2
author = Dzianis Katsisheuski
author_email = kad6lr@bosch.com
description = A small chanelog creator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    beautifulsoup4==4.10.0
    Jinja2==3.0.2
    lxml==4.6.3
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    docker-changelog-creator = changelog.main:main